--- a/aula-04/index.css
+++ b/aula-04/index.css
@@ -97,3 +97,24 @@ body {
   padding: 10px;
   cursor: pointer;
 }
+
+.list {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  justify-content: space-between;
+}
+
+.list-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px 20px;
+  gap: 10px;
+
+  /* min-width: 45%; */
+
+  background-color: var(--gray);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
